fix gap in section team

--- a/CSS/tablet.css
+++ b/CSS/tablet.css
@@ -163,7 +163,7 @@
      .team-list {
         display: flex;
         flex-wrap: wrap;
-        gap: var(--item-card-gap); 
+        gap: 64px 24px; 
        }
 
       .team-item{
